modified it a little more

--- a/root/index.html
+++ b/root/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>This is my heading 1</h1>
-        <h2>This is my heading 2</h2>
+        <h2>This is my heading 2 with something edited</h2>
     </body>
 </html>
